calculation of unconditional moments + updated documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(fitGMVAR)
 export(get_boldA_eigens)
 export(get_gradient)
 export(get_hessian)
+export(get_regime_autocovs)
 export(get_regime_means)
 export(in_paramspace)
 export(iterate_more)
@@ -30,5 +31,6 @@ export(quantile_residual_tests)
 export(quantile_residuals)
 export(simulateGMVAR)
 export(swap_parametrization)
+export(uncond_moments)
 import(graphics)
 import(stats)
