new function: get_omega_eigens

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(fitGMVAR)
 export(get_boldA_eigens)
 export(get_gradient)
 export(get_hessian)
+export(get_omega_eigens)
 export(get_regime_autocovs)
 export(get_regime_means)
 export(in_paramspace)
