updated simulateGMVAR, documentation, added get_soc

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(add_data)
 export(calc_gradient)
 export(calc_hessian)
 export(check_parameters)
+export(cond_moments)
 export(diagnostic_plot)
 export(fitGMVAR)
 export(get_boldA_eigens)
@@ -24,6 +25,7 @@ export(get_hessian)
 export(get_omega_eigens)
 export(get_regime_autocovs)
 export(get_regime_means)
+export(get_soc)
 export(in_paramspace)
 export(iterate_more)
 export(loglikelihood)
