--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,17 +2,19 @@ Package: gmvarkit
 Title: Estimate Gaussian Mixture Vector Autoregressive Model
 Version: 1.2.0
 Authors@R: person("Savi", "Virolainen", email = "savi.virolainen@helsinki.fi", role = c("aut", "cre"))
-Description: Unconstrained and constrained maximum likelihood estimation of Gaussian Mixture Vector Autoregressive (GMVAR)
-    model, quantile residual tests, graphical diagnostics, simulations, and forecasting.
-    Leena Kalliovirta, Mika Meitz, Pentti Saikkonen (2016) <doi:10.1016/j.jeconom.2016.02.012>.
+Description: Unconstrained and constrained maximum likelihood estimation of structural and reduced form 
+    Gaussian mixture vector autoregressive (GMVAR) model, quantile residual tests, graphical diagnostics,
+    simulations, forecasting, and estimation of generalized impulse response function.
+    Leena Kalliovirta, Mika Meitz, Pentti Saikkonen (2016) <doi:10.1016/j.jeconom.2016.02.012>,
+    Savi Virolainen (2020) <arXiv:2007.04713>.
 Depends: R (>= 4.0.0)
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
-Imports: Brobdingnag (>= 1.2-5), mvnfast (>= 0.2.5), parallel (>=
-        3.4.0), stats (>= 3.4.0), pbapply (>= 1.3-4), graphics (>=
-        3.4.0), grDevices (>= 3.4.0)
+Imports: Brobdingnag (>= 1.2-6), mvnfast (>= 0.2.5), parallel (>=
+        4.0.0), stats (>= 4.0.0), pbapply (>= 1.4-2), graphics (>=
+        4.0.0), grDevices (>= 4.0.0)
 Suggests: testthat, knitr, rmarkdown
 VignetteBuilder: knitr
 NeedsCompilation: no
