--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(calc_gradient)
 export(calc_hessian)
 export(check_parameters)
 export(cond_moments)
+export(diag_Omegas)
 export(diagnostic_plot)
 export(fitGMVAR)
 export(get_boldA_eigens)
