--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,12 +5,14 @@ S3method(plot,gmvar)
 S3method(plot,gmvarpred)
 S3method(plot,qrtest)
 S3method(predict,gmvar)
+S3method(print,girf)
 S3method(print,gmvar)
 S3method(print,gmvarpred)
 S3method(print,gmvarsum)
 S3method(print,qrtest)
 S3method(residuals,gmvar)
 S3method(summary,gmvar)
+export(GIRF)
 export(GMVAR)
 export(add_data)
 export(alt_gmvar)
