--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,11 +10,15 @@ S3method(print,girf)
 S3method(print,gmvar)
 S3method(print,gmvarpred)
 S3method(print,gmvarsum)
+S3method(print,lr)
 S3method(print,qrtest)
+S3method(print,wald)
 S3method(residuals,gmvar)
 S3method(summary,gmvar)
 export(GIRF)
 export(GMVAR)
+export(LR_test)
+export(Wald_test)
 export(add_data)
 export(alt_gmvar)
 export(calc_gradient)
