--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(get_omega_eigens)
 export(get_regime_autocovs)
 export(get_regime_means)
 export(get_soc)
+export(gmvar_to_sgmvar)
 export(in_paramspace)
 export(iterate_more)
 export(loglikelihood)
@@ -43,7 +44,9 @@ export(print_std_errors)
 export(profile_logliks)
 export(quantile_residual_tests)
 export(quantile_residuals)
+export(reorder_W_columns)
 export(simulateGMVAR)
+export(swap_W_signs)
 export(swap_parametrization)
 export(uncond_moments)
 import(graphics)
