--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: gmvarkit
 Title: Estimate Gaussian Mixture Vector Autoregressive Model
-Version: 1.3.0
+Version: 1.3.1
 Authors@R: person("Savi", "Virolainen", email = "savi.virolainen@helsinki.fi", role = c("aut", "cre"))
 Description: Unconstrained and constrained maximum likelihood estimation of structural and reduced form 
     Gaussian mixture vector autoregressive (GMVAR) model, quantile residual tests, graphical diagnostics,
@@ -12,7 +12,7 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
-Imports: mvnfast (>= 0.2.5), parallel (>= 4.0.0), stats (>= 4.0.0),
+Imports: Brobdingnag (>= 1.2-4), mvnfast (>= 0.2.5), parallel (>= 4.0.0), stats (>= 4.0.0),
          pbapply (>= 1.4-2), graphics (>= 4.0.0), grDevices (>= 4.0.0)
 Suggests: testthat, knitr, rmarkdown
 VignetteBuilder: knitr
