new function: re_decompose_Omegas

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ export(print_std_errors)
 export(profile_logliks)
 export(quantile_residual_tests)
 export(quantile_residuals)
+export(re_decompose_Omegas)
 export(reorder_W_columns)
 export(simulateGMVAR)
 export(swap_W_signs)
