--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(plot,gmvar)
 S3method(plot,gmvarpred)
 S3method(plot,qrtest)
 S3method(predict,gmvar)
+S3method(print,gfevd)
 S3method(print,girf)
 S3method(print,gmvar)
 S3method(print,gmvarpred)
@@ -15,6 +16,7 @@ S3method(print,qrtest)
 S3method(print,wald)
 S3method(residuals,gmvar)
 S3method(summary,gmvar)
+export(GFEVD)
 export(GIRF)
 export(GMVAR)
 export(LR_test)
