--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,8 @@ Description: Unconstrained and constrained maximum likelihood estimation of stru
     simulations, forecasting, and estimation of generalized impulse response function and generalized 
     forecast error variance decomposition.
     Leena Kalliovirta, Mika Meitz, Pentti Saikkonen (2016) <doi:10.1016/j.jeconom.2016.02.012>,
-    Savi Virolainen (2020) <arXiv:2007.04713>.
+    Savi Virolainen (2020) <arXiv:2007.04713>,
+    Savi Virolainen (2021) <arXiv:arXiv:2109.13648>.
 Depends: R (>= 3.6.0)
 License: GPL-3
 Encoding: UTF-8
