stmvarpars_to_gstmvar + misc

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ S3method(print,gsmvarsum)
 S3method(print,qrtest)
 S3method(residuals,gsmvar)
 S3method(summary,gsmvar)
+export(GAfit)
 export(GFEVD)
 export(GIRF)
 export(GSMVAR)
