stmvar_to_gstmvar + numdiff  + misc

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ export(quantile_residuals)
 export(redecompose_Omegas)
 export(reorder_W_columns)
 export(simulateGMVAR)
+export(stmvar_to_gstmvar)
 export(swap_W_signs)
 export(swap_parametrization)
 export(uncond_moments)
