--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,11 +9,13 @@ S3method(plot,qrtest)
 S3method(predict,gsmvar)
 S3method(print,gfevd)
 S3method(print,girf)
+S3method(print,gmvar)
 S3method(print,gsmvar)
 S3method(print,gsmvarpred)
 S3method(print,gsmvarsum)
 S3method(print,qrtest)
 S3method(residuals,gsmvar)
+S3method(summary,gmvar)
 S3method(summary,gsmvar)
 export(GAfit)
 export(GFEVD)
