backward compatibility improved

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(logLik,gsmvar)
 S3method(plot,gfevd)
 S3method(plot,girf)
+S3method(plot,gmvar)
 S3method(plot,gsmvar)
 S3method(plot,gsmvarpred)
 S3method(plot,qrtest)
@@ -41,6 +42,7 @@ export(get_omega_eigens)
 export(get_regime_autocovs)
 export(get_regime_means)
 export(get_soc)
+export(gmvar_to_gsmvar)
 export(gsmvar_to_sgsmvar)
 export(in_paramspace)
 export(iterate_more)
