deprecated functions for backward compatibility

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,10 +26,12 @@ S3method(summary,gsmvar)
 export(GAfit)
 export(GFEVD)
 export(GIRF)
+export(GMVAR)
 export(GSMVAR)
 export(LR_test)
 export(Wald_test)
 export(add_data)
+export(alt_gmvar)
 export(alt_gsmvar)
 export(calc_gradient)
 export(calc_hessian)
