added deprecated functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ export(cond_moment_plot)
 export(cond_moments)
 export(diag_Omegas)
 export(diagnostic_plot)
+export(fitGMVAR)
 export(fitGSMVAR)
 export(get_boldA_eigens)
 export(get_foc)
@@ -50,6 +51,7 @@ export(get_regime_autocovs)
 export(get_regime_means)
 export(get_soc)
 export(gmvar_to_gsmvar)
+export(gmvar_to_sgmvar)
 export(gsmvar_to_sgsmvar)
 export(in_paramspace)
 export(iterate_more)
