--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ S3method(print,gsmvarsum)
 S3method(print,qrtest)
 S3method(residuals,gmvar)
 S3method(residuals,gsmvar)
+S3method(simulate,gsmvar)
 S3method(summary,gmvar)
 S3method(summary,gsmvar)
 export(GAfit)
@@ -62,7 +63,6 @@ export(quantile_residual_tests)
 export(quantile_residuals)
 export(redecompose_Omegas)
 export(reorder_W_columns)
-export(simulateGMVAR)
 export(stmvar_to_gstmvar)
 export(swap_W_signs)
 export(swap_parametrization)
