--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,6 +63,7 @@ export(quantile_residual_tests)
 export(quantile_residuals)
 export(redecompose_Omegas)
 export(reorder_W_columns)
+export(simulateGMVAR)
 export(stmvar_to_gstmvar)
 export(swap_W_signs)
 export(swap_parametrization)
