predict, girf + misc

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ S3method(plot,gmvarpred)
 S3method(plot,gsmvar)
 S3method(plot,gsmvarpred)
 S3method(plot,qrtest)
+S3method(predict,gmvar)
 S3method(predict,gsmvar)
 S3method(print,gfevd)
 S3method(print,girf)
