--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,7 @@ Description: Unconstrained and constrained maximum likelihood estimation of stru
     Savi Virolainen (2020) <arXiv:2007.04713>,
     Savi Virolainen (2021) <arXiv:2109.13648>.
 Depends: R (>= 3.6.0)
+BugReports: https://github.com/saviviro/gmvarkit/issues
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
