--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: gmvarkit
-Title: Estimate Gaussian And Student's t Mixture Vector Autoregressive Models
+Title: Estimate Gaussian and Student's t Mixture Vector Autoregressive Models
 Version: 2.0.2
 Authors@R: person("Savi", "Virolainen", email = "savi.virolainen@helsinki.fi", role = c("aut", "cre"))
 Description: Unconstrained and constrained maximum likelihood estimation of structural and reduced form 
