started writing linear_IRF

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,6 +60,7 @@ export(gmvar_to_sgmvar)
 export(gsmvar_to_sgsmvar)
 export(in_paramspace)
 export(iterate_more)
+export(linear_IRF)
 export(loglikelihood)
 export(print_std_errors)
 export(profile_logliks)
