--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ S3method(print,gsmvar)
 S3method(print,gsmvarpred)
 S3method(print,gsmvarsum)
 S3method(print,hypotest)
+S3method(print,irf)
 S3method(print,qrtest)
 S3method(residuals,gmvar)
 S3method(residuals,gsmvar)
