--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ S3method(plot,gmvar)
 S3method(plot,gmvarpred)
 S3method(plot,gsmvar)
 S3method(plot,gsmvarpred)
+S3method(plot,irf)
 S3method(plot,qrtest)
 S3method(predict,gmvar)
 S3method(predict,gsmvar)
