started Pearson_residuals

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(GIRF)
 export(GMVAR)
 export(GSMVAR)
 export(LR_test)
+export(Pearson_residuals)
 export(Rao_test)
 export(Wald_test)
 export(add_data)
