--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,8 @@
 Package: gmvarkit
 Title: Estimate Gaussian and Student's t Mixture Vector Autoregressive Models
 Version: 2.1.3
-Authors@R: person("Savi", "Virolainen", email = "savi.virolainen@helsinki.fi", role = c("aut", "cre"))
+Authors@R: person("Savi", "Virolainen", email = "savi.virolainen@helsinki.fi",
+                  role = c("aut", "cre"), comment = c(ORCID = "0000-0002-5075-6821"))
 Description: Unconstrained and constrained maximum likelihood estimation of structural and reduced form 
     Gaussian mixture vector autoregressive, Student's t mixture vector autoregressive, and Gaussian and Student's t
     mixture vector autoregressive models, quantile residual tests, graphical diagnostics,
