--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ Description: Unconstrained and constrained maximum likelihood estimation of stru
     simulations, forecasting, and estimation of generalized impulse response function and generalized 
     forecast error variance decomposition.
     Leena Kalliovirta, Mika Meitz, Pentti Saikkonen (2016) <doi:10.1016/j.jeconom.2016.02.012>,
-    Savi Virolainen (forthcoming) <doi:10.1080/07350015.2024.2322090>,
+    Savi Virolainen (2025) <doi:10.1080/07350015.2024.2322090>,
     Savi Virolainen (2022) <doi:10.48550/arXiv.2109.13648>.
 Depends: R (>= 3.6.0)
 BugReports: https://github.com/saviviro/gmvarkit/issues
