gmvar to gsmvar back

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ export(get_omega_eigens)
 export(get_regime_autocovs)
 export(get_regime_means)
 export(get_soc)
+export(gmvar_to_gsmvar)
 export(gsmvar_to_sgsmvar)
 export(in_paramspace)
 export(iterate_more)
